testsuite/poke.pkl/int-struct-type-diag-9.pk
/* { dg-do compile } */

type Foo =
  struct uint<32>
  { struct int<15> /* { dg-error "invalid field" } */
    {
      int<15> c;
    } a;
    int<17> b;
  };
